Some more changes
- Update Skript dependency
- Correctly fetch entity data
- Have event-values have more information

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ processResources {
 
 shadowJar {
     relocate 'co.aikar.commands', 'me.skriptinsight.acf'
-    destinationDir = new File(project.projectDir.absolutePath, "Server\\plugins")
+//    destinationDir = new File(project.projectDir.absolutePath, "Server\\plugins")
 }
 
 build.dependsOn shadowJar
