--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '4.0.4'
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group = pluginGroup
@@ -36,6 +37,7 @@ dependencies {
     compile "co.aikar:acf-paper:0.5.0-SNAPSHOT"
     implementation 'com.github.amogilev:yagson:67167a988c'
     shadow files("${System.getProperty('java.home')}/../lib/tools.jar")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
@@ -48,7 +50,16 @@ processResources {
 
 shadowJar {
     relocate 'co.aikar.commands', 'me.skriptinsight.acf'
-//    destinationDir = new File(project.projectDir.absolutePath, "Server\\plugins")
 }
 
 build.dependsOn shadowJar
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
